# gravit-epistemic-verifier

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cd.yml  ci.yml  codeql-analysis.yml  publish_benchmarks.yml
api/: main.py  schema.py
benchmarks/: bench_cost.py  bench_latency.py  dataset.json  runner.py
benchmarks/results/: v1.0_report.json
docs/: BENCHMARK_METRICS.md  CATEGORY.md  CATEGORY_DEFINITION.md  FORMAL_METHODS.md  MICAR_COMPLIANCE_MATRIX.md  PARTNERSHIP_FRAMEWORK.md  PIPELINE.md  REGULATORY_SANDBOX.md  THREAT_MODEL.md
examples/: basic_verify.py
formal/: __init__.py  semantics.lean  smt_verifier.py
gravit_verifier/: __init__.py  adversarial.py  audit.py  consensus.py  engine.py  history_keeper.py  models.py  policy.py  scoring.py  semantic.py  semantic_onnx.py
gravit_verifier/adversarial/: __init__.py  _legacy.py  detector.py
gravit_verifier/ees/: lineage.py  metadata.py
gravit_verifier/policy/: _legacy.py  validator.py
helm-chart/gravit-epistemic-verifier/: Chart.yaml  values.yaml
helm-chart/gravit-epistemic-verifier/templates/: deployment.yaml
integrations/allunity/: README.md  settlement_flow.md  x402_adapter.py
integrations/allunity/examples/: README.md  a2a_negotiation.py  a2m_delegated.py  a2s_micropayment.py
nginx/: nginx.conf
prometheus/: prometheus.yml
proofs/: __init__.py  commitment.py  transfer_approved.json  transfer_blocked.json
specification/: agentic_audit_trail.schema.json  epistemic_commitment.schema.json  truth_vector.schema.json
src/: verifier.py
terraform/: main.tf
terraform/modules/verifier/: main.tf
tests/: __init__.py  conftest.py  test_adversarial.py  test_consensus.py  test_engine.py  test_semantic.py  test_smt.py  test_verifier.py  test_verifier_engine.py
tests/adversarial/: test_intent_substitution.py  test_replay_attack.py  test_sandwich_attack.py
tests/fixtures/: invalid_action.json  valid_action.json
whitepaper/: gravit_epistemic_verification_v1.0.md
