[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gravit-epistemic-verifier"
version = "1.0.0"
description = "Production-grade epistemic verification for AI agents"
authors = [{name = "Gravit Open Network Foundation"}]
license = {text = "Apache-2.0"}
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "z3-solver>=4.12.0"
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1.0", "black>=23.0"]

[tool.ruff]
line-length = 88
target-version = "py311"
